# GenAI_v2

./: .env  1-langchain-intro.ipynb  README.md  main.py  pyproject.toml
